added new methods to crete user as creator

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "cypress": "^13.3.2",
     "cypress-xpath": "^2.0.1",
+    "faker": "^6.6.6",
     "mocha": "^10.2.0"
   },
   "scripts": {
